update 24.07.2018: - обновлены страницы профиля - включена пагинация на странице истории

--- a/KINOv2/KINOv2/Views/Account/ConfirmEmail.cshtml
+++ b/KINOv2/KINOv2/Views/Account/ConfirmEmail.cshtml
@@ -2,9 +2,15 @@
     ViewData["Title"] = "Подтверждение почты.";
 }
 
-<h2>@ViewData["Title"]</h2>
-<div>
-    <p>
-        Спасибо за подтверждение Вашей почты.
-    </p>
+<div class="container px-0 px-sm-3">
+    <div class="row">
+        <div class="col-12">
+            <h2>@ViewData["Title"]</h2>
+            <div>
+                <p>
+                    Спасибо за подтверждение Вашей почты.
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
