--- a/KINOv2/KINOv2/Views/Account/Lockout.cshtml
+++ b/KINOv2/KINOv2/Views/Account/Lockout.cshtml
@@ -2,7 +2,13 @@
     ViewData["Title"] = "Аккаунт заблокирован";
 }
 
-<header>
-    <h2 class="text-danger">@ViewData["Title"]</h2>
-    <p class="text-danger">Данный аккаунт заблокирован. Пожалуйста, попробуйте познее. Если ваш аккаунт был заблокирован случайно, что ж, бывает.</p>
-</header>
+<div class="container px-0 px-sm-3">
+    <div class="row">
+        <div class="col-12">
+            <header>
+                <h2 class="text-danger">@ViewData["Title"]</h2>
+                <p class="text-danger">Данный аккаунт заблокирован. Пожалуйста, попробуйте познее. Если ваш аккаунт был заблокирован случайно, что ж, бывает.</p>
+            </header>
+        </div>
+    </div>
+</div>
