--- a/KINOv2/KINOv2/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/KINOv2/KINOv2/Views/Account/ResetPasswordConfirmation.cshtml
@@ -2,7 +2,15 @@
     ViewData["Title"] = "Потверждение изменения пароля";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    Ваш пароль был успешно изменен. Для входа в систему <a class="text-orange" asp-action="Login">нажмите сюда</a>.
-</p>
+<div class="container px-0 px-sm-3">
+    <div class="row">
+        <div class="col-12">
+            <h2>@ViewData["Title"]</h2>
+            <p>
+                Ваш пароль был успешно изменен. Для входа в систему <a class="text-orange" asp-action="Login">нажмите сюда</a>.
+            </p>
+        </div>
+    </div>
+</div>
+
+
