--- a/KINOv2/KINOv2/Views/Account/AccessDenied.cshtml
+++ b/KINOv2/KINOv2/Views/Account/AccessDenied.cshtml
@@ -2,7 +2,14 @@
     ViewData["Title"] = "Доступ запрещен";
 }
 
-<header>
-    <h2 class="text-danger">ViewData["Title"]</h2>
-    <p class="text-danger">У Вас нет доступа к запрашиваемому ресурсу.</p>
-</header>
+<div class="container px-0 px-sm-3">
+     <div class="row">
+         <div class="col-12">
+             <header>
+                 <h2 class="text-danger">ViewData["Title"]</h2>
+                 <p class="text-danger">У Вас нет доступа к запрашиваемому ресурсу.</p>
+             </header>
+         </div>
+     </div>
+</div>
+
