--- a/KINOv2/KINOv2/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/KINOv2/KINOv2/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -2,7 +2,14 @@
     ViewData["Title"] = "Восстановление пароля";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    Письмо восстановления пароля отправлено на Вашу почту.
-</p>
+
+<div class="container px-0 px-sm-3">
+    <div class="row">
+        <div class="col-12">
+            <h2>@ViewData["Title"]</h2>
+            <p>
+                Письмо восстановления пароля отправлено на Вашу почту.
+            </p>
+        </div>
+    </div>
+</div>
