--- a/KINOv2/KINOv2/Views/Account/ResetPassword.cshtml
+++ b/KINOv2/KINOv2/Views/Account/ResetPassword.cshtml
@@ -3,32 +3,38 @@
     ViewData["Title"] = "Сброс пароля";
 }
 
-<h2>@ViewData["Title"]</h2>
-<h4>Укажите новый пароль.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <input asp-for="Code" type="hidden" />
-            <div class="form-group">
-                <label class="text-info" asp-for="Email"></label>
-                <input asp-for="Email" class="form-control control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="text-info" asp-for="Password"></label>
-                <input asp-for="Password" class="form-control control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="text-info" asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn border-orange w-100">Изменить</button>
-        </form>
-    </div>
+<div class="container px-0 px-sm-3">
+     <div class="row">
+         <div class="col-12">
+             <h2>@ViewData["Title"]</h2>
+             <h4>Укажите новый пароль.</h4>
+             <hr />
+             <div class="row">
+                 <div class="col-md-4">
+                     <form method="post">
+                         <div asp-validation-summary="All" class="text-danger"></div>
+                         <input asp-for="Code" type="hidden" />
+                         <div class="form-group">
+                             <label class="text-info" asp-for="Email"></label>
+                             <input asp-for="Email" class="form-control control" />
+                             <span asp-validation-for="Email" class="text-danger"></span>
+                         </div>
+                         <div class="form-group">
+                             <label class="text-info" asp-for="Password"></label>
+                             <input asp-for="Password" class="form-control control" />
+                             <span asp-validation-for="Password" class="text-danger"></span>
+                         </div>
+                         <div class="form-group">
+                             <label class="text-info" asp-for="ConfirmPassword"></label>
+                             <input asp-for="ConfirmPassword" class="form-control control" />
+                             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                         </div>
+                         <button type="submit" class="btn border-orange w-100">Изменить</button>
+                     </form>
+                 </div>
+             </div>
+         </div>
+     </div>
 </div>
 
 @section Scripts {
