--- a/KINOv2/KINOv2/Views/Account/SignedOut.cshtml
+++ b/KINOv2/KINOv2/Views/Account/SignedOut.cshtml
@@ -2,7 +2,14 @@
     ViewData["Title"] = "Signed out";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    You have successfully signed out.
-</p>
+<div class="container px-0 px-sm-3">
+    <div class="row">
+        <div class="col-12">
+            <h2>@ViewData["Title"]</h2>
+            <p>
+                You have successfully signed out.
+            </p>
+        </div>
+    </div>
+</div>
+
