--- a/KINOv2/KINOv2/Views/Manage/_Layout.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/_Layout.cshtml
@@ -2,12 +2,17 @@
     Layout = "/Views/Shared/_Layout.cshtml";
 }
 
+<div class="container px-0 px-sm-3">
+    <div class="row">
+        <div class="col-12">
+            <div class="d-md-flex flex-md-row mt-0">
+                @await Html.PartialAsync("_ManageNav")
 
-<div class="d-md-flex flex-md-row mt-0">
-    @await Html.PartialAsync("_ManageNav")
-
-    <div class="tab-content py-3 px-md-3 py-md-0 w-100 mt-2">
-        @RenderBody()
+                <div class="tab-content py-3 px-md-3 py-md-0 w-100 mt-2">
+                    @RenderBody()
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
